www/static/css/index.css
:root {
    --top-menu-bar-height: 40px;
    --menu-bar-height: 40px;
    --input-bar-height: 48px;
    --divider-size: 4px;
    --left-half-width: 70%;
    --top-half-height: 30%;
    --folder-width: 10%;
    --box-padding: 4px;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.ui-dark-theme {
    --terminal-background-color: #070707;
    --terminal-foreground-color: #ffffff;

    --background-color: #444;
    --light-background-color: #222;
    --active-color: #444;
    --foreground-color: #fff;
    --floating-border-color: #2f2f2f;
}

.ui-light-theme {
    --terminal-background-color: #dddddd;
    --terminal-foreground-color: #000000;

    --background-color: #f0f0f0;
    --light-background-color: #e0e0e0;
    --active-color: #cccccc;
    --foreground-color: #000000;
    --floating-border-color: #808080;
}

.ui-blue-theme {
    --terminal-background-color: #112233;
    --terminal-foreground-color: #ffffff;
    --background-color: #070723;
    --light-background-color: #101046;
    --active-color: #7777aa;
    --foreground-color: #fff;
    --floating-border-color: #223344;
}

body {
    background: var(--background-color);
    color: var(--foreground-color);
    
    overflow: hidden;
    font-family: fira, "mononoki Nerd Font Mono", "mononoki NF", Monaco, Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace;
}

select {
    margin: 2px;
    border-radius: var(--box-padding);

    height: 24px;
    min-width: 64px;

    border: none;
    color: var(--foreground-color);
    background: var(--light-background-color);


    transition: all 0.5s;
}

select:hover {
    background: var(--active-color);
    cursor: pointer;
}

.menu-bar > div {
    padding-left: 6px;
    line-height: calc(var(--menu-bar-height) - 2 * var(--box-padding) - 3px);
    background-color: var(--terminal-background-color);
}

.menu-bar button, .menu-bar a {
    width: 24px;
    height: 24px;
    border: 1px solid var(--floating-border-color);
    border-radius: var(--box-padding);
    background: var(--background-color);
    color: var(--foreground-color);
    box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.4);

    transition: all 0.5s;
}

.menu-bar button:hover, .menu-bar a:hover {
    cursor: pointer;
    transform: translateY(-3px);
    box-shadow: 0px 1px 2px 2px rgba(0,0,0,0.2);
}

.menu-bar a[title="Settings"] {
    float: right;
    color: var(--foreground-color);
    position: relative;
    top: 4px;
    right: 4px;
    line-height: 24px;
}

#ide-menubar {
    text-align: center;
}

#folder-view {
    width: calc(var(--folder-width) - var(--divider-size));
    height: calc(100vh - 2 * var(--box-padding));

    float: left;
    padding: 4px;

    display: grid;
    grid-template-rows: calc(var(--menu-bar-height) + 2 * var(--box-padding)) 1fr;
}

#folder-view .menu-bar {
    padding-left: 0;
    padding-right: 0;
}

#code-container {
    width: calc(100% - var(--folder-width));
    float: left;
}

.left-half, .right-half {
    height: calc(100vh - var(--top-menu-bar-height) - 2 * var(--box-padding));
    padding: var(--box-padding);
    float: left;
}

.left-half {
    width: var(--left-half-width);
    display: inline-block;
}

.right-half {
    width: calc(100% - var(--left-half-width) - var(--divider-size));
    display: grid;
    grid-template-rows: var(--top-half-height) calc(2 * var(--divider-size)) 1fr;
}

.top-half, .bottom-half {
    width: 100vw;
    float: left;
    display: inline-block;
}

.menu-bar {
    position: relative;
    min-height: var(--menu-bar-height);
    height: var(--menu-bar-height);
    padding: var(--box-padding);
    border-radius: var(--box-padding);
}

.floating-container {
    border: 1px solid var(--floating-border-color);
    border-radius: var(--box-padding);
    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.4);
    background: var(--dark-background-color);
    height: 100%;
    position: relative;
}

#code-editor {
    height: 100%;
    border-radius: var(--box-padding);
}

#render-target {
    width: 100%;
    height: 100%;
    background: var(--terminal-background-color);
    border-radius: var(--box-padding);
}

.floating-container:has(#render-target.highlight) {
    border: 1px solid #7fab44;
}

#code-result {
    height: 100%;
    border-radius: var(--box-padding);

    background: var(--terminal-background-color); 
    color: var(--terminal-foreground-color);

    font-size: 16px;
    font-family: fira, "mononoki Nerd Font Mono", "mononoki NF", Monaco, Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace;

    overflow-y: auto;
    overflow-x: auto;

    padding: 12px;
}

#code-result.errored {
    color: #f55;
}

#code-horizontal-divider, #main-horizontal-divider {
    min-width: var(--divider-size);
    height: calc(100vh - var(--top-menu-bar-height));
    cursor: col-resize;

    display: inline-block;
    float: left;
    z-index: 1000;
}

#vertical-divider {
    width: 100%;
    height: 100%;
    cursor: row-resize;
}

#input-bar {
    position: absolute;
    bottom: calc(2 * var(--box-padding));
    left: 2%;

    border: 1px solid #7fab44;
    border-radius: var(--box-padding);

    padding: 4px;

    background-color: var(--background-color);
    color: var(--foreground-color);
    outline: none;

    min-height: var(--input-bar-height);
    width: 96%;
    padding: 8px;
    float: left;

    font-size: 16px;
    font-family: fira, "mononoki Nerd Font Mono", "mononoki NF", Monaco, Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace;

    transition: transform 0.3s ease-in-out;
}

#input-bar.hide {
    transform: translateY(100px);
}

.jquery-modal.blocker.current {
    z-index: 100 !important;
}

.modal {
    z-index: 200 !important;

    background: var(--background-color) !important;
    color: var(--foreground-color) !important;

    border-radius: var(--box-padding);
    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.4);
}

.modal input {
    background-color: var(--light-background-color);
    color: var(--foreground-color);
    outline: none;
    border: none;

    min-height: var(--input-bar-height);
    width: 100%;
    padding: 8px;
    float: left;

    font-size: 16px;
    font-family: fira, "mononoki Nerd Font Mono", "mononoki NF", Monaco, Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace;
}

.modal button {
    margin: 8px 0;
    height: 24px;
    min-width: 64px;

    border: none;
    color: var(--foreground-color);
    background: var(--light-background-color);

    transition: all 0.5s;
}

.modal button:hover {
    background: var(--active-background-color);
    cursor: pointer;
}

.modal button:disabled {
    background: var(--dark-background-color);
    cursor: not-allowed;
}

.modal .file-list {
    max-height: 400px;
    overflow: auto;
}

.modal .file-list button {
    display: block;
    width: 100%;
}

.modal .file-list .file-select {
    float: left;
    width: 85%;
}

.modal .file-list .file-delete {
    float: left;
    width: 15%;

    background: #802424;
}

.modal .file-list .file-delete:hover {
    background: #a04444;
}

.settings-grid {
    display: grid;
    grid-template-columns: 1fr 2fr;
    align-items: center;
}


@font-face {
    font-family: fira;
    src: url(../FiraCode-Regular.woff);
}

.ace_editor {
    /* font-family: "mononoki Nerd Font Mono", "mononoki NF", Monaco, Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace !important; */
    font-family: fira, monospace !important;
}

::-webkit-scrollbar {
    width: 0.45em;
}

::-webkit-scrollbar-track {
    box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
}

::-webkit-scrollbar-thumb {
    background-color: var(--active-color);
    outline: 1px solid var(--background-color);
}

.folder-item {
    user-select: none;
    position: relative;
    cursor: pointer;
    transition: all 200ms;
    padding-left: 4px;
}

.folder-item.file.active {
    background-color: var(--light-background-color);
}

.folder-item:not(.active):hover {
    background-color: var(--active-color);
}

.folder-item > .folder-item-button {
    opacity: 0;
    float: right;
    transition: all 200ms;
}

.folder-item:hover > .folder-item-button {
    opacity: 1;
}

.folder {
    position: relative;
    left: 32px;
    width: calc(100% - 32px);
    overflow-y: auto;
    overflow-x: hidden;
}

.folder-root {
    left: 0px !important;
    overflow-y: auto;
    overflow-x: hidden;
    height: 100%;
    max-height: calc(100vh - var(--menu-bar-height) - 5 * var(--box-padding));  /* subtract the padding */
    background-color: var(--terminal-background-color);
    border-radius: var(--box-padding);
}

.folder-root > .folder-item {
    border-left: none !important;
}

.hidden {
    display: none !important;
}

.section-label {
    position: absolute;
    top: 0px;
    right: 0px;
    padding: 6px;
    border-bottom-left-radius: var(--box-padding);
    border-top-right-radius: calc(var(--box-padding) / 2);
    border-bottom: 1px solid var(--floating-border-color);
    border-left: 1px solid var(--floating-border-color);
    background-color: var(--light-background-color);
    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.4);
}

